# bla

./: CMakeLists.txt
EGF/math/: basic_functions.tpp  functions.h
EGF/math/matrix/: mat.h
EGF/math/vector/: vec.h  vec1.cpp  vec1.h  vec2.cpp  vec2.h  vec3.h  vec3.tpp  vec4.cpp  vec4.h
test/: main.cpp
